[LibOS,PAL] While emulating `etc` passthrough host's hostname
The difference between Linux and Gramine is that Gramine expected
the hostname to be a valid domain - as we assume the host is untrusted.
In the case of Linux, it doesn't presume that the root user
tries to exploit it through a malicious hostname.

Signed-off-by: Mariusz Zaborski <oshogbo@invisiblethingslab.com>

--- a/libos/test/regression/meson.build
+++ b/libos/test/regression/meson.build
@@ -49,6 +49,7 @@ tests = {
     'groups': {},
     'helloworld': {},
     'host_root_fs': {},
+    'hostname': {},
     'init_fail': {},
     'keys': {},
     'kill_all': {},
