--- a/libos/test/regression/tests.toml
+++ b/libos/test/regression/tests.toml
@@ -50,6 +50,8 @@ manifests = [
   "gettimeofday",
   "groups",
   "helloworld",
+  "hostname",
+  "hostname_emulate_etc",
   "host_root_fs",
   "init_fail",
   "keys",
